Test, I added a title

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset='utf-8'>
-        <title>[APP NAME HERE]</title>
+        <title>Fear and Loathing On the Campaign Trail</title>
 
         <link href='css/main.css' rel='stylesheet' type='text/css'>
     </head>
