tested submit function and object pass to ajax function, which was a success

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
         <meta charset='utf-8'>
         <title>Fear and Loathing On the Campaign Trail</title>
 
-        <link href='css/main.css' rel='stylesheet' type='text/css'>
+        <link href='css/style.css' rel='stylesheet' type='text/css'>
     </head>
     <body>
 
