--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,14 +4,12 @@
         <meta charset='utf-8'>
         <title>Fear and Loathing On the Campaign Trail</title>
 
-        <link href='css/main.css' rel='stylesheet' type='text/css'>
+        <link href='css/style.css' rel='stylesheet' type='text/css'>
     </head>
     <body>
 
         <header>
             <h1>Fear and Loathing On the Campaign Trail</h1>
-        </header>
-
         <nav>
             <ul>
                 <li><a class='show-???-list' href='#'>Show List of [WHAT?]</a></li>
@@ -19,7 +17,7 @@
                 <!-- how can we make a specific section below visible? HINT: look at the _nav.scss file! -->
             </ul>
         </nav>
-
+      </header>
         <main>
             <section class='list-of-???'>
                 <h2>List of [WHAT?]</h2>
@@ -28,7 +26,7 @@
 
             <!-- what other sections do we need? -->
 
-            <section class='create-a-???'>
+            <section class='create-a-candidate'>
                 <h2>Create a New Candidate</h2>
                 <form class='createCandidate'>
                     <aside>
