We added candidate list functionality in js

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,15 +14,18 @@
 
         <nav>
             <ul>
-                <li><a class='show-???-list' href='#'>Show List of [WHAT?]</a></li>
+                <li><a class='show-candidate-list' href='#'>List of Candidates</a></li>
+                <li><a class='create-candidate' href='#'>Create Candidate</a></li>
+                <li><a class='create-campaign' href='#'>Create Campaign</a></li>
+                <li><a class='see-old-campaigns' href='#'>See Old Campaigns</a></li>
                 <!-- what other nav do we need? -->
                 <!-- how can we make a specific section below visible? HINT: look at the _nav.scss file! -->
             </ul>
         </nav>
 
         <main>
-            <section class='list-of-???'>
-                <h2>List of [WHAT?]</h2>
+            <section class='list-of-candidates'>
+                <h2>List of Candidates</h2>
                 <ul></ul>
             </section>
 
