working on campaign POST

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -74,6 +74,7 @@
                         <option value='null'>Select Candidate</option>
                     </select>
                 </form>
+                <button class='startCampaign'>Create Campaign</button>
             </section>
 
             <section class='campaign-list'>
