--- a/client/public/index.html
+++ b/client/public/index.html
@@ -59,6 +59,34 @@
                     </aside>
                 </form>
             </section>
+            <section class='updateAttributes'>
+              <h4>Update Candidate</h4>
+                <form class='update-attribute'>
+                  <aside>
+                      <label for='new-name'>Name</label>
+                      <input type='text' id='new-name' name='name' required>
+                  </aside>
+                  <aside>
+                      <label for='new-avatar'>Avatar</label>
+                      <input type='url' id='new-avatar' name='avatar' required>
+                  </aside>
+                  <aside>
+                      <label for='intel'>Intelligence</label>
+                      <input type='number' id='intel' name='Intelligence' min='0' max='10' value='0'>
+                  </aside>
+                  <aside>
+                      <label for='charisma'>Charisma</label>
+                      <input type='number' id='charisma' name='Charisma' min='0' max='10' value='0'>
+                  </aside>
+                  <aside>
+                      <label for='willpower'>Willpower</label>
+                      <input type='number' id='willpower' name='Willpower' min='0' max='10' value='0'>
+                  </aside>
+                  <aside>
+                  <input type='submit' value='Update Candidate'>
+                </form>
+            </section>
+
 
             <section class='create-a-campaign'>
                 <h2>Create a Campaign</h2>
