set candidate id transfer to ajax function, debugging through ajax errors

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -62,19 +62,18 @@
 
             <section class='create-a-campaign'>
                 <h2>Create a Campaign</h2>
-                <form class='campaignCanOne'>
+                <form class='campaignStart'>
                     <label for='candDropOne'>Pick A Candidate</label>
                     <select id='canDropOne' name='canDropOne'>
                         <option value='null'>Select Candidate</option>
                     </select>
-                </form>
-                <form class='campaignCanTwo'>
+
                     <label for='canDropTwo'>Pick A Second Candidate</label>
                     <select id='canDropTwo' name='canDropTwo'>
                         <option value='null'>Select Candidate</option>
                     </select>
+                    <input type='submit' value='Create Campaign'>
                 </form>
-                <button class='startCampaign'>Create Campaign</button>
             </section>
 
             <section class='campaign-list'>
