--- a/client/public/index.html
+++ b/client/public/index.html
@@ -36,11 +36,11 @@
                 <form class='createCandidate'>
                     <aside>
                         <label for='new-name'>Name</label>
-                        <input type='text' id='new-name' name='name' required>
+                        <input type='text' id='new-name' name='name'>
                     </aside>
                     <aside>
                         <label for='new-avatar'>Avatar</label>
-                        <input type='url' id='new-avatar' name='avatar' required>
+                        <input type='url' id='new-avatar' name='avatar'>
                     </aside>
                     <aside>
                         <label for='intel'>Intelligence</label>
@@ -63,31 +63,30 @@
               <h4>Update Candidate</h4>
                 <form class='update-attribute'>
                   <aside>
-                      <label for='update-name'>Name</label>
+                      <label for='update-name'>Change Name</label>
                       <input type='text' id='update-name' name='name' required>
                   </aside>
                   <aside>
-                      <label for='update-avatar'>Avatar</label>
+                      <label for='update-avatar'>Change Avatar</label>
                       <input type='url' id='update-avatar' name='avatar' required>
                   </aside>
                   <aside>
-                      <label for='update-intel'>Intelligence</label>
+                      <label for='update-intel'>Add Intelligence</label>
                       <input type='number' id='update-intel' name='Intelligence' min='0' max='10' value='0'>
                   </aside>
                   <aside>
-                      <label for='update-charisma'>Charisma</label>
+                      <label for='update-charisma'>Add Charisma</label>
                       <input type='number' id='update-charisma' name='Charisma' min='0' max='10' value='0'>
                   </aside>
                   <aside>
-                      <label for='update-willpower'>Willpower</label>
+                      <label for='update-willpower'>Add Willpower</label>
                       <input type='number' id='update-willpower' name='Willpower' min='0' max='10' value='0'>
                   </aside>
                   <aside>
                   <input type='submit' value='Update Candidate'>
                 </form>
             </section>
-
-
+            
             <section class='create-a-campaign'>
                 <h2>Create a Campaign</h2>
                 <form class='campaignCanOne'>
