--- a/client/public/index.html
+++ b/client/public/index.html
@@ -64,11 +64,11 @@
                 <form class='update-attribute'>
                   <aside>
                       <label for='update-name'>Change Name</label>
-                      <input type='text' id='update-name' name='name' required>
+                      <input type='text' id='update-name' name='name'>
                   </aside>
                   <aside>
                       <label for='update-avatar'>Change Avatar</label>
-                      <input type='url' id='update-avatar' name='avatar' required>
+                      <input type='url' id='update-avatar' name='avatar'>
                   </aside>
                   <aside>
                       <label for='update-intel'>Add Intelligence</label>
@@ -86,7 +86,7 @@
                   <input type='submit' value='Update Candidate'>
                 </form>
             </section>
-            
+
             <section class='create-a-campaign'>
                 <h2>Create a Campaign</h2>
                 <form class='campaignStart'>
