started styling for campaign form, nav bar, and candidate form

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -89,12 +89,12 @@
             <section class='create-a-campaign'>
                 <h2>Create a Campaign</h2>
                 <form class='campaignStart'>
-                    <label for='candDropOne'>Pick A Candidate</label>
+                    <label for='candDropOne'>First Candidate</label>
                     <select id='canDropOne' name='canDropOne'>
                         <option value='null'>Select Candidate</option>
                     </select>
 
-                    <label for='canDropTwo'>Pick A Second Candidate</label>
+                    <label for='canDropTwo'>Second Candidate</label>
                     <select id='canDropTwo' name='canDropTwo'>
                         <option value='null'>Select Candidate</option>
                     </select>
