--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
         </header>
         <main>
             <section class='list-of-candidates'>
-                <h2>List of candidates</h2>
+                <h2>List of Candidates</h2>
                 <ul></ul>
             </section>
 
